--- a/springdatarest/src/main/resources/application.properties
+++ b/springdatarest/src/main/resources/application.properties
@@ -6,4 +6,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_tracker
 spring.datasource.username=learningspring
 spring.datasource.password=learningspring
 
+# Setting a custom base-path for all the endpoints in this application
 spring.data.rest.base-path=/api
+
+# Custom path for Swagger UI. 
+# This will simply redirect to the default path: http://localhost:8082/swagger-ui/index.html
+# springdoc.swagger-ui.path=/employee.html
+
+# Custom path for API documentation
+# Default path is: http://localhost:8082/v3/api-docs
+# springdoc.api-docs.path=/documentation
