--- a/10-springsecurity/src/main/resources/application.properties
+++ b/10-springsecurity/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_tracker
 spring.datasource.username=learningspring
 spring.datasource.password=learningspring
+
+spring.security.user.name=manideep
+spring.security.user.password=manideep
