Student form with all fields is added

--- a/11-springthymeleaf/src/main/resources/application.properties
+++ b/11-springthymeleaf/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=springthymeleaf
 
 server.port=8082
+
+countries=Brazil,France,Germany,India,USA
+genders=Male,Female,Other
+techStacks=Java,Thymeleaf,Spring MVC,Spring Boot,Spring Secuirty
