--- a/12-springmvcform/src/main/resources/application.properties
+++ b/12-springmvcform/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=springmvcform
 
 
 server.port=8082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_tracker
+spring.datasource.username=learningspring
+spring.datasource.password=learningspring
