--- a/13-springmvcsecurity/src/main/resources/application.properties
+++ b/13-springmvcsecurity/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.application.name=springmvcsecurity
 
 server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_tracker
+spring.datasource.username=learningspring
+spring.datasource.password=learningspring
+
 spring.security.user.name=manideep
 spring.security.user.password=1223334444
