--- a/14-advancemapping/src/main/resources/application.properties
+++ b/14-advancemapping/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=advancemapping
 
+
 server.port=8082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/instructor_info
+spring.datasource.username=learningspring
+spring.datasource.password=learningspring
