--- a/14-advancemapping/src/main/resources/application.properties
+++ b/14-advancemapping/src/main/resources/application.properties
@@ -6,3 +6,12 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/instructor_info
 spring.datasource.username=learningspring
 spring.datasource.password=learningspring
+
+spring.main.banner-mode=off
+logging.level.root=warn
+
+# This will show all the SQL queries generated and executed by Hibernate (just SQL structure with "?")
+logging.level.org.hibernate.SQL=trace
+
+# This will show the actual parameter value used in "?"
+logging.level.org.hibernate.orm.jdbc.bind=trace
