--- a/14-advancemapping/src/main/resources/application.properties
+++ b/14-advancemapping/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=advancemapping
 
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/instructor_info
+spring.datasource.url=jdbc:mysql://localhost:3306/manage_edu_db
 spring.datasource.username=learningspring
 spring.datasource.password=learningspring
 
